@@ -40,6 +40,7 @@ Version CVS HEAD (?)
   * fixed configure check for libsndfile loop support
   * bugfix: when a stereo sample is replaced, make sure both zones of
     the sample channel dimension get updated with the new sample
+  * minor gui fix: made multi line lables expand to use full width
 
 Version 0.1.1 (2007-12-06)
 
